Fix for orbit next/prev not appearing on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3381,3 +3381,6 @@ div.epilogue {
 .orbit-bullets, .touch .orbit-bullets {
   display: table;
   text-align: center; }
+
+.touch .orbit-container .orbit-prev, .touch .orbit-container .orbit-next {
+  display: block; }
